new osthus-pom-version